--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -1,7 +1,7 @@
 {
 	"@metadata": {
 		"authors": [
-			"이츠레아"
+			"Liberty LLC","이츠레아","well-made-plush","revi","nuxe"
 		]
 	},
 	"skinname-liberty": "리버티",
