--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,7 +1,7 @@
 {
 	"@metadata": {
 		"authors": [
-			"Liberty LLC","Itsurea","well-made-plush","nessun","revi","zlzleking","katinor","nuxe"
+			"Liberty LLC","Itsurea","..."
 		]
 	},
 	"skinname-liberty": "Liberty",
