--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -7,5 +7,58 @@
 	"skinname-liberty": "리버티",
 	"liberty-desc": "리브레 위키의 기본스킨입니다.",
 	"liberty.css": "/* 이 CSS 설정은 리버티 스킨을 사용하는 사용자에게 적용됩니다 */",
-	"liberty.js": "/* 이 자바스크립트 설정은 리버티 스킨을 사용하는 사용자에게 적용됩니다 */"
+	"liberty.js": "/* 이 자바스크립트 설정은 리버티 스킨을 사용하는 사용자에게 적용됩니다 */",
+	"liberty-twitter": "트위터",
+	"liberty-facebook": "페이스북",
+	"liberty-recent": "최근바뀜",
+	"liberty-recent-desc": "최근 변경 문서를 불러옵니다. [alt+shift+r]",
+	"liberty-random": "임의문서",
+	"liberty-random-desc": "임의 문서를 불러옵니다. [alt+shift+x]",
+	"liberty-view": "보기",
+	"liberty-search": "검색",
+	"liberty-mypage-desc": "내 사용자 문서를 불러옵니다. [alt+shift+u]",
+	"liberty-noti": "알림",
+	"liberty-noti-desc": "알림 목록을 불러옵니다.",
+	"liberty-mycont": "내 기여 목록",
+	"liberty-mycont-desc": "내 기여 목록을 불러옵니다. [alt+shift+y]",
+	"liberty-mytalk": "내 토론 문서",
+	"liberty-mytalk-desc": "내 토론 문서를 불러옵니다. [alt+shift+m]",
+	"liberty-mywatch": "내 주시 문서",
+	"liberty-mywatch-desc": "내 주시 문서를 불러옵니다. [alt+shift+l]",
+	"liberty-setting": "환경 설정",
+	"liberty-setting-desc": "환경 설정을 불러옵니다.",
+	"liberty-logout": "로그아웃",
+	"liberty-logout-desc": "로그아웃",
+	"liberty-login": "로그인",
+	"liberty-login-desc": "로그인",
+	"liberty-nameholder": "사용자 계정 이름을 입력하세요.",
+	"liberty-passholder": "비밀번호를 입력하세요.",
+	"liberty-rememberme": "로그인 상태를 유지하기",
+	"liberty-lostpassword": "비밀번호를 잊으셨나요?",
+	"liberty-recentdoc": "최근바뀜",
+	"liberty-recenttalk": "최근토론",
+	"liberty-more": "더보기",
+	"liberty-toolpurge": "갱신",
+	"liberty-toolpurge-desc": "문서 캐시를 새로 만들어 강제로 최신 버전이 나오게 합니다. [alt+shift+p]",
+	"liberty-tooledit": "편집",
+	"liberty-tooledit-desc": "문서를 편집합니다. [alt+shift+e]",
+	"liberty-toolnew": "추가",
+	"liberty-toolnew-desc": "새 문단을 추가합니다. [alt+shift+n]",
+	"liberty-tooldocu": "본문",
+	"liberty-tooltalk": "토론",
+	"liberty-tooldocu-desc": "본문을 불러옵니다. [alt+shift+t]",
+	"liberty-tooltalk-desc": "토론을 불러옵니다. [alt+shift+t]",
+	"liberty-toolhist": "기록",
+	"liberty-toolhist-desc": "문서의 편집 기록을 불러옵니다. [alt+shift+h]",
+	"liberty-toolcont": "기여",
+	"liberty-toolcont-desc": "사용자의 기여 목록을 불러옵니다.",
+	"liberty-toolwatch": "주시",
+	"liberty-toolunwatch": "주시해제",
+	"liberty-toolxref": "역링크",
+	"liberty-toolmove": "이동",
+	"liberty-toolmove-desc": "문서를 옮깁니다. [alt+shift+b]",
+	"liberty-toolprotect": "보호",
+	"liberty-toolprotect-desc": "문서를 보호합니다. [alt+shift+s]",
+	"liberty-tooldelete": "삭제",
+	"liberty-tooldelete-desc": "문서를 삭제합니다. [alt+shift+d]"
 }
