--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -4,8 +4,11 @@
 			"Liberty LLC","..."
 		]
 	},
-	"skinname-liberty": "리버티",
+	"liberty": "리버티",
 	"liberty-desc": "리브레 위키의 기본스킨입니다.",
+	"liberty-summary": "Description appearing on top of Special:MyExtension.",
 	"liberty.css": "/* 이 CSS 설정은 리버티 스킨을 사용하는 사용자에게 적용됩니다 */",
-	"liberty.js": "/* 이 자바스크립트 설정은 리버티 스킨을 사용하는 사용자에게 적용됩니다 */"
+	"liberty.js": "/* 이 자바스크립트 설정은 리버티 스킨을 사용하는 사용자에게 적용됩니다 */",
+
+	"liberty-sp-title": "리버티 스킨 설정"
 }
