--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -13,7 +13,7 @@
 
 	"prefs-liberty-colorMain": "주 색상",
 	"prefs-liberty-colorSub": "보조 색상",
-	"prefs-liberty-colorAutoSub": "자동으로 계산",
+	"prefs-liberty-colorAutoSub": "보조 색상을 자동으로 계산",
 
 	"prefs-liberty-sidebarPosition": "사이드바 위치",
 	"prefs-liberty-sidebarPosition_0": "오른쪽 (기본)",
