Various changes to the login modal dialog
* Proper internationalization
* Performance optimization: neither the modal dialog HTML nor the JS is
* loaded for registered, logged-in users since it'd be unnecessary for them
* Split the modal dialog JS into its own ResourceLoader module so it's not loaded for all users
* Added a few TODO comments
* Got rid of an inline onsubmit handler and moved it to the JS file and improved it a bit

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -1,11 +1,18 @@
 {
 	"@metadata": {
 		"authors": [
-			"Liberty LLC","..."
+			"Liberty LLC",
+			"..."
 		]
 	},
 	"skinname-liberty": "리버티",
 	"liberty-desc": "리브레 위키의 기본스킨입니다.",
+	"liberty-forgot-pw": "비밀번호를 잊으셨나요?",
+	"liberty-login": "로그인",
+	"liberty-login-btn": "로그인",
+	"liberty-remember": "로그인 상태를 유지하기",
+	"liberty-warning": "경고",
+	"liberty-warning-text": "아이디와 비밀번호를 정확히 입력하세요.",
 	"liberty.css": "/* 이 CSS 설정은 리버티 스킨을 사용하는 사용자에게 적용됩니다 */",
 	"liberty.js": "/* 이 자바스크립트 설정은 리버티 스킨을 사용하는 사용자에게 적용됩니다 */"
 }
