--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,11 +1,20 @@
 {
 	"@metadata": {
 		"authors": [
-			"Liberty LLC","..."
+			"Liberty LLC",
+			"..."
 		]
 	},
 	"skinname-liberty": "Liberty",
+	"liberty-btn-close": "Close",
+	"liberty-btn-save-changes": "Save changes",
 	"liberty-desc": "Default skin of Libre Wiki.",
+	"liberty-forgot-pw": "Forgot your password?",
+	"liberty-login": "Login",
+	"liberty-login-btn": "Login",
+	"liberty-remember": "Remember my login",
+	"liberty-warning": "Warning",
+	"liberty-warning-text": "Enter your username and password correctly.",
 	"liberty.css": "/* CSS placed here will affect users of the Liberty skin */",
 	"liberty.js": "/* Any JavaScript here will be loaded for users using the Liberty skin */"
 }
