--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,10 +9,16 @@
 	"liberty-btn-close": "Close",
 	"liberty-btn-save-changes": "Save changes",
 	"liberty-desc": "Default skin of Libre Wiki.",
+	"liberty-facebook": "Facebook",
 	"liberty-forgot-pw": "Forgot your password?",
 	"liberty-login": "Login",
 	"liberty-login-btn": "Login",
+	"liberty-purge": "Purge",
+	"liberty-recent-discussions": "Recent discussions",
 	"liberty-remember": "Remember my login",
+	"liberty-tooltip-purge": "Purge the cache of this page.",
+	"liberty-twitter": "Twitter",
+	"liberty-view-more": "View more",
 	"liberty-warning": "Warning",
 	"liberty-warning-text": "Enter your username and password correctly.",
 	"liberty.css": "/* CSS placed here will affect users of the Liberty skin */",
