--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -7,10 +7,17 @@
 	},
 	"skinname-liberty": "리버티",
 	"liberty-desc": "리브레 위키의 기본스킨입니다.",
+	"liberty-facebook": "페이스북",
 	"liberty-forgot-pw": "비밀번호를 잊으셨나요?",
 	"liberty-login": "로그인",
 	"liberty-login-btn": "로그인",
+	"liberty-purge": "갱신",
+	"liberty-recent-discussions": "최근토론",
 	"liberty-remember": "로그인 상태를 유지하기",
+	"liberty-tooltip-menu": "게시판에 접속합니다.",
+	"liberty-tooltip-purge": "문서 캐쉬를 새로 지정하여 문서를 불러옵니다.",
+	"liberty-twitter": "트위터",
+	"liberty-view-more": "더보기",
 	"liberty-warning": "경고",
 	"liberty-warning-text": "아이디와 비밀번호를 정확히 입력하세요.",
 	"liberty.css": "/* 이 CSS 설정은 리버티 스킨을 사용하는 사용자에게 적용됩니다 */",
