--- a/i18n/en.json
+++ b/i18n/en.json
@@ -13,6 +13,7 @@
 	"liberty-feed-new": "[New]",
 	"liberty-forgot-pw": "Forgot your password?",
 	"liberty-login": "Login",
+	"liberty-login-alter": "Login with other method",
 	"liberty-login-btn": "Login",
 	"liberty-purge": "Purge",
 	"liberty-recent-discussions": "Recent discussions",
