저자 수정 등

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -6,10 +6,10 @@ nessun
 revi
 zlzleking
 katinor
+Hoto Cocoa
 
 And Special Thanks for Contributing to
-
 nuxe
-Hoto Cocoa
+Jack Phoenix 
 
 And, you
