skin.json and i18n edit

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,7 +8,7 @@
 	"skinname-liberty": "Liberty",
 	"liberty-btn-close": "Close",
 	"liberty-btn-save-changes": "Save changes",
-	"liberty-desc": "Default skin of Libre Wiki.",
+	"liberty-desc": "Responsible skin for LibreWiki.",
 	"liberty-facebook": "Facebook",
 	"liberty-feed-new": "[New]",
 	"liberty-forgot-pw": "Forgot your password?",
