--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -6,7 +6,7 @@
 		]
 	},
 	"skinname-liberty": "리버티",
-	"liberty-desc": "리브레 위키의 기본스킨입니다.",
+	"liberty-desc": "리브레 위키를 위한 반응형 스킨입니다.",
 	"liberty-facebook": "페이스북",
 	"liberty-forgot-pw": "비밀번호를 잊으셨나요?",
 	"liberty-login": "로그인",
