--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -24,8 +24,15 @@
 	"liberty.js": "/* 이 자바스크립트 설정은 리버티 스킨을 사용하는 사용자에게 적용됩니다 */",
 	"prefs-liberty": "리버티 스킨",
 	"prefs-color": "색상 설정",
+	"prefs-font": "글꼴 설정",
+	"prefs-web": "웹폰트 로딩",
 	"liberty-pref-color-main": "주 색상 지정",
 	"liberty-pref-color-main-help": "사이트에서 주로 사용할 색상을 정합니다.",
 	"liberty-pref-color-second": "보조 색상 지정",
-	"liberty-pref-color-second-help": "사이트에서 보조로 사용할 색상을 정합니다."
+	"liberty-pref-color-second-help": "사이트에서 보조로 사용할 색상을 정합니다.",
+	"liberty-pref-fonts": "사용하실 폰트를 선택하세요.",
+	"liberty-pref-fonts-helplabel": "설명",
+	"liberty-pref-fonts-help": "여기서 설정한 폰트는 사용자의 해당 폰트가 디바이스에 설치되었을 때만 적용됩니다. 만약 폰트가 설치되어 있지 않더라도 작동하는 것을 원하신다면 하단의 웹폰트 로딩을 켜주세요.",
+	"liberty-pref-fonts-web": "웹폰트 로딩 (지원 폰트 : 본고딕, 나눔고딕, 나눔명조, KoPub돋움)",
+	"liberty-pref-fonts-web-help": "웹폰트는 많은 데이터 사용량을 발생시키고, 로딩 속도 저하와 데이터 요금 발생을 야기할 수 있습니다. 신중히 선택해 주세요."
 }
