Add document infomation button

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -15,9 +15,11 @@
 	"liberty-login": "Login",
 	"liberty-login-alter": "Login with other method",
 	"liberty-login-btn": "Login",
+	"liberty-info": "Info",
 	"liberty-purge": "Purge",
 	"liberty-recent-discussions": "Recent discussions",
 	"liberty-remember": "Remember my login",
+	"liberty-tooltip-info": "View document's infomation",
 	"liberty-tooltip-purge": "Purge the cache of this page.",
 	"liberty-twitter": "Twitter",
 	"liberty-view-more": "View more",
