--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -12,9 +12,11 @@
 	"liberty-login": "로그인",
     "liberty-login-alter": "다른 방법으로 로그인하기",
 	"liberty-login-btn": "로그인",
+	"liberty-info": "문서 정보",
 	"liberty-purge": "갱신",
 	"liberty-recent-discussions": "최근토론",
 	"liberty-remember": "로그인 상태를 유지하기",
+	"liberty-tooltip-info": "문서의 정보를 열람합니다",
 	"liberty-tooltip-purge": "문서 캐쉬를 새로 지정하여 문서를 불러옵니다.",
 	"liberty-twitter": "트위터",
 	"liberty-view-more": "더보기",
