--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,12 +2,9 @@
 	"@metadata": {
 		"authors": [
 			"Librewiki developers",
-			"..."
 		]
 	},
 	"skinname-liberty": "Liberty",
-	"liberty-btn-close": "Close",
-	"liberty-btn-save-changes": "Save changes",
 	"liberty-desc": "Responsive skin for [https://librewiki.net/ LibreWiki]",
 	"liberty-facebook": "Facebook",
 	"liberty-feed-new": "[New]",
@@ -20,7 +17,7 @@
 	"liberty-remember": "Remember my login",
 	"liberty-tooltip-purge": "Purge the cache of this page.",
 	"liberty-twitter": "Twitter",
-	"liberty-view-more": "View more",
+	"liberty-view-more": "View more¡",
 	"liberty-warning": "Warning",
 	"liberty-warning-text": "Enter your username and password correctly.",
 	"liberty.css": "/* CSS placed here will affect users of the Liberty skin */",
@@ -29,6 +26,6 @@
 	"prefs-color": "Color setting",
 	"liberty-pref-color-main": "Main color",
 	"liberty-pref-color-main-help": "Main color that will be used in this site.",
-	"liberty-pref-color-second": "Second color",
-	"liberty-pref-color-second-help": "Second color that will be used in this site."
+	"liberty-pref-color-second": "Secondary color",
+	"liberty-pref-color-second-help": "Secondary color that will be used in this site."
 }
