--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -34,5 +34,5 @@
 	"liberty-pref-color-second-help": "사이트에서 보조로 사용할 색상을 정합니다.",
 	"liberty-pref-fonts": "사용하실 폰트를 선택하세요.",
 	"liberty-pref-fonts-helplabel": "설명",
-	"liberty-pref-fonts-help": "여기서 설정한 폰트는 사용자의 해당 폰트가 디바이스에 설치되었을 때만 적용됩니다. 다만 본고딕, 나눔고딕 등은 웹폰트로 로딩되어서 적용됩니다."
+	"liberty-pref-fonts-help": "선택하신 폰트는 웹폰트로 로드됩니다. 하지만 맑은 고딕은 사용자의 시스템에 설치되어 있어야 적용됩니다."
 }
