Make new preferences properly i18n-able
Unfortunately preserving the Korean i18n in this commit is not possible, as the automatic TWN translation import process would overwrite any all changes I'd make to other i18n files than en.json and qqq.json.
Thus in order to preserve the Korean i18n, the respective MediaWiki: pages will need to be created at TWN.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,8 +6,21 @@
 	},
 	"skinname-liberty": "Liberty",
 	"liberty-desc": "Responsive skin for [https://librewiki.net/ LibreWiki]",
+	"liberty-dark-default": "Do not ignore",
+	"liberty-dark-dark": "Ignore and activate dark mode",
+	"liberty-dark-light": "Ignore and activate bright mode",
 	"liberty-facebook": "Facebook",
 	"liberty-feed-new": "[New]",
+	"liberty-font-name-default": "default",
+	"liberty-font-name-noto-sans-kr": "Noto Sans KR",
+	"liberty-font-name-spoqa-han-sans": "Spoqa Han Sans",
+	"liberty-font-name-nanum-gothic": "Nanum Gothic",
+	"liberty-font-name-nanum-myeongjo": "Nanum Myeongjo",
+	"liberty-font-name-dokdo": "Dokdo",
+	"liberty-font-name-gaegu": "Gaegu",
+	"liberty-font-name-hankc": "Hankc",
+	"liberty-font-name-youth": "Youth",
+	"liberty-font-name-malgun-gothic": "Malgun Gothic",
 	"liberty-forgot-pw": "Forgot your password?",
 	"liberty-login": "Login",
 	"liberty-login-alter": "Login with other method",
