--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -6,5 +6,17 @@
 		]
 	},
 	"skinname-liberty": "{{optional}}",
+	"liberty-dark-default": "{{optional}}",
+	"liberty-dark-dark": "{{optional}}",
+	"liberty-dark-light": "{{optional}}",
+	"liberty-font-name-noto-sans-kr": "{{optional}}",
+	"liberty-font-name-spoqa-han-sans": "{{optional}}",
+	"liberty-font-name-nanum-gothic": "{{optional}}",
+	"liberty-font-name-nanum-myeongjo": "{{optional}}",
+	"liberty-font-name-dokdo": "{{optional}}",
+	"liberty-font-name-gaegu": "{{optional}}",
+	"liberty-font-name-hankc": "{{optional}}",
+	"liberty-font-name-youth": "{{optional}}",
+	"liberty-font-name-malgun-gothic": "{{optional}}",
 	"liberty-pref-fonts-helplabel": "{{Identical|Help}}"
 }
