Add font and update licenses

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -13,6 +13,7 @@
 	"liberty-feed-new": "[New]",
 	"liberty-font-name-default": "default",
 	"liberty-font-name-noto-sans-kr": "Noto Sans KR",
+	"liberty-font-name-noto-serif-kr": "Noto Serif KR",
 	"liberty-font-name-spoqa-han-sans": "Spoqa Han Sans",
 	"liberty-font-name-nanum-gothic": "Nanum Gothic",
 	"liberty-font-name-nanum-myeongjo": "Nanum Myeongjo",
