--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -15,6 +15,7 @@
 	"liberty-font-name-default": "기본값",
 	"liberty-font-name-nanum-gothic": "나눔고딕",
 	"liberty-font-name-malgun-gothic": "맑은 고딕",
+	"liberty-font-name-noto-serif-kr": "본고딕",
 	"liberty-forgot-pw": "비밀번호를 잊으셨나요?",
 	"liberty-login": "로그인",
 	"liberty-login-alter": "다른 방법으로 로그인하기",
