--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,7 +9,6 @@
 	"liberty-dark-default": "Do not ignore",
 	"liberty-dark-dark": "Ignore and activate dark mode",
 	"liberty-dark-light": "Ignore and activate bright mode",
-	"liberty-facebook": "Facebook",
 	"liberty-feed-new": "[New]",
 	"liberty-font-name-default": "default",
 	"liberty-font-name-noto-sans-kr": "Noto Sans KR",
@@ -30,9 +29,9 @@
 	"liberty-purge": "Purge",
 	"liberty-recent-discussions": "Recent discussions",
 	"liberty-remember": "Remember my login",
+	"liberty-share": "Share",
 	"liberty-tooltip-info": "View document's infomation",
 	"liberty-tooltip-purge": "Purge the cache of this page.",
-	"liberty-twitter": "Twitter",
 	"liberty-view-more": "View more",
 	"liberty.css": "/* CSS placed here will affect users of the Liberty skin */",
 	"liberty.js": "/* Any JavaScript here will be loaded for users using the Liberty skin */",
