--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -35,6 +35,7 @@
 	"liberty-purge": "새로 고침",
 	"liberty-recent-discussions": "최근 토론",
 	"liberty-remember": "로그인 상태를 유지하기",
+	"liberty-share": "공유",
 	"liberty-tooltip-info": "문서의 정보를 열람합니다",
 	"liberty-tooltip-purge": "이 문서의 캐시를 새로 고칩니다.",
 	"liberty-twitter": "트위터",
