--- a/i18n/en.json
+++ b/i18n/en.json
@@ -22,6 +22,14 @@
 	"liberty-font-name-youth": "Youth",
 	"liberty-font-name-malgun-gothic": "Malgun Gothic",
 	"liberty-forgot-pw": "Forgot your password?",
+	"liberty-layout-select-1000":"1000px",
+	"liberty-layout-select-1100":"1100px",
+	"liberty-layout-select-1200":"1200px (Default)",
+	"liberty-layout-select-1300":"1300px",
+	"liberty-layout-select-1400":"1400px",
+	"liberty-layout-select-1500":"1500px",
+	"liberty-layout-select-1600":"1600px",
+	"liberty-pref-layout-controlbar":"Remove navigation control bar",
 	"liberty-login": "Login",
 	"liberty-login-alter": "Login with other method",
 	"liberty-login-btn": "Login",
@@ -37,6 +45,11 @@
 	"liberty.js": "/* Any JavaScript here will be loaded for users using the Liberty skin */",
 	"prefs-liberty": "Liberty skin",
 	"prefs-color": "Color setting",
+	"prefs-layout": "Layout setting",
+	"liberty-pref-layout-navfix": "Off static navigation bar",
+	"liberty-pref-layout-sidebar": "Remove right sidebar",
+	"liberty-pref-layout-width":"Static width",
+	"liberty-pref-layout-width-help":"Set the maximum size of document area",
 	"liberty-pref-color-main": "Main color",
 	"liberty-pref-color-main-help": "Main color that will be used in this site.",
 	"liberty-pref-color-second": "Secondary color",
