--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -34,6 +34,7 @@
 	"liberty-layout-select-1400":"1400px",
 	"liberty-layout-select-1500":"1500px",
 	"liberty-layout-select-1600":"1600px",
+	"liberty-pref-layout-controlbar":"내비게이션 컨트롤 바 제거",
 	"liberty-login": "로그인",
 	"liberty-login-alter": "다른 방법으로 로그인하기",
 	"liberty-login-btn": "로그인",
