Change to ads option to based on user rights

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -22,14 +22,14 @@
 	"liberty-font-name-youth": "Youth",
 	"liberty-font-name-malgun-gothic": "Malgun Gothic",
 	"liberty-forgot-pw": "Forgot your password?",
-	"liberty-layout-select-1000":"1000px",
-	"liberty-layout-select-1100":"1100px",
-	"liberty-layout-select-1200":"1200px (Default)",
-	"liberty-layout-select-1300":"1300px",
-	"liberty-layout-select-1400":"1400px",
-	"liberty-layout-select-1500":"1500px",
-	"liberty-layout-select-1600":"1600px",
-	"liberty-pref-layout-controlbar":"Remove navigation control bar",
+	"liberty-layout-select-1000": "1000px",
+	"liberty-layout-select-1100": "1100px",
+	"liberty-layout-select-1200": "1200px (Default)",
+	"liberty-layout-select-1300": "1300px",
+	"liberty-layout-select-1400": "1400px",
+	"liberty-layout-select-1500": "1500px",
+	"liberty-layout-select-1600": "1600px",
+	"liberty-pref-layout-controlbar": "Remove navigation control bar",
 	"liberty-pref-layout-morearticle": "Remove ads below article area",
 	"liberty-login": "Login",
 	"liberty-login-alter": "Login with other method",
@@ -47,10 +47,11 @@
 	"prefs-liberty": "Liberty skin",
 	"prefs-color": "Color setting",
 	"prefs-layout": "Layout setting",
+	"prefs-ads": "Ads setting",
 	"liberty-pref-layout-navfix": "Off static navigation bar",
 	"liberty-pref-layout-sidebar": "Remove right sidebar",
-	"liberty-pref-layout-width":"Static width",
-	"liberty-pref-layout-width-help":"Set the maximum size of document area",
+	"liberty-pref-layout-width": "Static width",
+	"liberty-pref-layout-width-help": "Set the maximum size of document area",
 	"liberty-pref-color-main": "Main color",
 	"liberty-pref-color-main-help": "Main color that will be used in this site.",
 	"liberty-pref-color-second": "Secondary color",
@@ -60,5 +61,13 @@
 	"liberty-pref-fonts-helplabel": "Help",
 	"liberty-pref-fonts-help": "The font will be loaded from Google's servers except for the Malgun Gothic font.",
 	"liberty-pref-dark": "Ignore system dark mode setting?",
-	"liberty-pref-dark-help": "Choose whether to follow system settings when activating dark mode."
+	"liberty-pref-dark-help": "Choose whether to follow system settings when activating dark mode.",
+	"liberty-pref-ads-header": "Remove header ads.",
+	"liberty-pref-ads-right": "Remove right ads.",
+	"liberty-pref-ads-bottom": "Remove bottom ads.",
+	"liberty-pref-ads-belowarticle": "Remove ads on below article .",
+	"right-blockads-header": "Can remove header ads on Liberty skin.",
+	"right-blockads-right": "Can remove right ads on Liberty skin.",
+	"right-blockads-belowarticle": "Can remove below article ads on Liberty skin.",
+	"right-blockads-bottom": "Can remove bottom ads on Liberty skin."
 }
