--- a/i18n/en.json
+++ b/i18n/en.json
@@ -65,7 +65,7 @@
 	"liberty-pref-ads-header": "Remove header ads.",
 	"liberty-pref-ads-right": "Remove right ads.",
 	"liberty-pref-ads-bottom": "Remove bottom ads.",
-	"liberty-pref-ads-belowarticle": "Remove the ads in the article below.",
+	"liberty-pref-ads-belowarticle": "Remove the ads below the article space",
 	"right-blockads-header": "Can remove header ads on Liberty skin.",
 	"right-blockads-right": "Can remove right ads on Liberty skin.",
 	"right-blockads-belowarticle": "Can remove below article ads on Liberty skin.",
